@startuml
class Cliente{
- numeroCliente: String
- apellido: String
- dni: String
- cuit: String
}
Cliente --> Cuenta
abstract class Cuenta {
- saldo: double
+ depositar(double monto): void
+ {abstract} extraerEfectivo(double monto): boolean
+ {abstract} informarSaldo(): String
}

class CajaAhorro {
- tasaInteres: double
+ extraerEfectivo(double monto): boolean
+ informarSaldo(): String
+ cobrarInteres():double
}

class CuentaCorriente {
- descubierto: double
+ extraerEfectivo(double monto): boolean
+ informarSaldo(): String
+ depositarCheques( double monto):boolean
}

CajaAhorro -up-|> Cuenta
CuentaCorriente -up-|> Cuenta

@enduml